--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=bistro-manager
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/bistro_manager
+spring.datasource.url=jdbc:postgresql://db:5432/bistro_manager
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
